--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
+
 <body>
 
-<p>
-   
-</p>
-<script type="text/javascript" src="scripts.js"></script>
+  <div id="something"></div>
+  <input type="button" onclick="getItem()" value="Click me"/> 
+
 </body>
+
+<script type="text/javascript" src="scripts.js"></script>
+
 </html>
