--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 </head>
 
 <body>
-
+<!-- 
   <div id="something"></div>
   <input type="button" onclick="getItem()" value="Click me"/> 
-
+-->
+  <form>
+    <input type="radio" name="choice" value="Rock"> Rock
+    <input type="radio" name="choice" value="Paper"> Paper
+    <input type="radio" name="choice" value="Scissors"> Scissors
+    <input type="button" onclick="playRound()" id="btn" value="Play Game">
+  </form>
 </body>
 
 <script type="text/javascript" src="scripts.js"></script>
